Denies illegal access when building on JDK9, but does nothing on JDK8 and below